syntax = "proto3";

option csharp_namespace = "ChatService.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Chat{
    rpc SendMessage(SendMessageRequest) returns(google.protobuf.Empty);
    rpc GetAllMessages(google.protobuf.Empty) returns(stream GetAllMessagesResponse);
}

message SendMessageRequest{
    ChatMessage chatMessage=1;
}

message ChatMessage{
    User sender=1;
    string content=2;
    google.protobuf.Timestamp dateTimeStamp=3;
}

message User{
    string name=1;
    Status status=2;
    enum Status{
        CONNECTED=0;
        DISCONNECTED=1;
    }
}

message GetAllMessagesResponse{
   repeated ChatMessage messages=1;
   
}